Adjust avatar size to ensure it covers entire circular container

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a.nav-link {
 }
 
 #img-wrapper img {
-  height: 100%;
+  height: 105%;
   width: auto;
   margin: auto;
 }
